--- a/src/app/pages/task/task.component.html
+++ b/src/app/pages/task/task.component.html
@@ -1,1 +1,16 @@
-<p>task component</p>
+<mat-grid-list cols="4">
+  <!-- Add your grid tiles here -->
+  <mat-grid-tile>
+    hello 1
+  </mat-grid-tile>
+  <mat-grid-tile>
+    hello 2
+  </mat-grid-tile>
+  <mat-grid-tile>
+    hello 3
+  </mat-grid-tile>
+  <mat-grid-tile>
+    hello 4
+  </mat-grid-tile>
+</mat-grid-list>
+
