--- a/src/app/pages/task/task.component.html
+++ b/src/app/pages/task/task.component.html
@@ -1,16 +1,20 @@
-<mat-grid-list cols="4">
-  <!-- Add your grid tiles here -->
+<mat-card>
+<mat-grid-list cols="4" >
+  <!-- 1st Block -->
   <mat-grid-tile>
-    hello 1
+    To Do
   </mat-grid-tile>
+  <!-- 2nd Block -->
   <mat-grid-tile>
-    hello 2
+    In Progress
   </mat-grid-tile>
+  <!-- 3rd Block -->
   <mat-grid-tile>
-    hello 3
+    In Review
   </mat-grid-tile>
+  <!-- 4th Block -->
   <mat-grid-tile>
-    hello 4
+    Done
   </mat-grid-tile>
 </mat-grid-list>
-
+</mat-card>
